src/test/ui/issues/issue-41255.stderr
error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:11:9
   |
LL |         5.0 => {},
   |         ^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:15:9
   |
LL |         5.0f32 => {},
   |         ^^^^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:19:10
   |
LL |         -5.0 => {},
   |          ^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:23:9
   |
LL |         1.0 .. 33.0 => {},
   |         ^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:23:16
   |
LL |         1.0 .. 33.0 => {},
   |                ^^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:31:9
   |
LL |         39.0 ..= 70.0 => {},
   |         ^^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:31:18
   |
LL |         39.0 ..= 70.0 => {},
   |                  ^^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:40:11
   |
LL |         ..71.0 => {}
   |           ^^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:45:12
   |
LL |         ..=72.0 => {}
   |            ^^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:50:9
   |
LL |         71.0.. => {}
   |         ^^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:60:10
   |
LL |         (3.14, 1) => {},
   |          ^^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:69:18
   |
LL |         Foo { x: 2.0 } => {},
   |                  ^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:11:9
   |
LL |         5.0 => {},
   |         ^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:15:9
   |
LL |         5.0f32 => {},
   |         ^^^^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:19:10
   |
LL |         -5.0 => {},
   |          ^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:23:9
   |
LL |         1.0 .. 33.0 => {},
   |         ^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:23:16
   |
LL |         1.0 .. 33.0 => {},
   |                ^^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:31:9
   |
LL |         39.0 ..= 70.0 => {},
   |         ^^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:31:18
   |
LL |         39.0 ..= 70.0 => {},
   |                  ^^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:40:11
   |
LL |         ..71.0 => {}
   |           ^^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:45:12
   |
LL |         ..=72.0 => {}
   |            ^^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:50:9
   |
LL |         71.0.. => {}
   |         ^^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:60:10
   |
LL |         (3.14, 1) => {},
   |          ^^^^

error: floating-point types cannot be used in patterns
  --> $DIR/issue-41255.rs:69:18
   |
LL |         Foo { x: 2.0 } => {},
   |                  ^^^

error: aborting due to 24 previous errors

